<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_characters">

    <fragment
        android:id="@+id/navigation_characters"
        android:name="pl.wsei.marvel.ui.characters.CharactersFragment"
        android:label="@string/title_characters"
        tools:layout="@layout/fragment_characters" />

    <fragment
        android:id="@+id/navigation_comics"
        android:name="pl.wsei.marvel.ui.comics.ComicsFragment"
        android:label="@string/title_comics"
        tools:layout="@layout/fragment_comics" />

    <fragment
        android:id="@+id/navigation_creators"
        android:name="pl.wsei.marvel.ui.creators.CreatorsFragment"
        android:label="@string/title_creators"
        tools:layout="@layout/fragment_creators" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="pl.wsei.marvel.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

</navigation>