<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/public_key" />

    <EditText
        android:id="@+id/public_key_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="Insert your API public key"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/private_key" />

    <EditText
        android:id="@+id/private_key_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="Insert your API private key"/>


    <Button
        android:id="@+id/clear_favorites_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/settings_button_background"
        android:text="@string/clear_favorites"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/clear_browsing_history_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/settings_button_background"
        android:text="@string/clear_browsing_history"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>